# autora-theorist-g-1

./: 404.html  LICENSE  README.md  benchmark.py  index.html  mkdocs.yml  play_ground.py  pyproject.toml  whatever.py
Additional Example/: Additional Example.ipynb  index.html
Basic Usage/: Basic Usage.ipynb  index.html
challenge/: theorist_benchmarking.ipynb
docs/: Basic Usage.ipynb  index.md  quickstart.md
docs/docs/: Basic Usage.ipynb  index.md
mkdocs/: base.yml
quickstart/: index.html
search/: search_index.json
src/autora/: __init__.py  benchmark.py  methods.py  utils.py
src/autora/theorist/g_1/: __init__.py  methods.py  utils.py
tests/: test_g_1.py
tests/tests/: test_g_1.py
