[project]
# UPDATE THIS BEFORE PUBLISHING
name = "g_1-theorist"
description = "Describe your contribution"
authors = []
dynamic = ["version"]

readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8,<4"

# ADD NEW DEPENDENCIES HERE
dependencies = [
    "autora-core",
    "scikit-learn"
]

[project.optional-dependencies]
dev = [
    "autora-core[dev]"
]

test = [
    "pytest",
    "hypothesis"
]

[project.urls]
repository = "https://github.com/MoAljam/autora-theorist-g-1"
documentation = "https://MoAljam.github.io/autora-theorist-g-1/"


[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
